--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <header class="header header__image">
       <div class="header__top">
-        <div class="logo header__logo"></div>
-        <div class="header__phone">+1 234 555-55-55</div>
+        <a href="#" ><img src="./images/logo.png" alt="Miami Condo Kings Logo" class="logo header__logo"></img></a>
+        <div class="header__phone"><a href="tel:+1 234 555-55-55">+1 234 555-55-55</a></div>
         <div class="header__get-in-touch"><a href="#" class="header__link">Call to order</a></div>
       </div>
 
@@ -54,21 +54,21 @@
       <section class="section">
         <h2 class="heading section__heading">Gallery<span class="heading__picture"></span></h2>
         <div class="gallery">
-          <div class="photos">
+          <article class="photos">
             <img src="images/photos/1.jpg" alt="Marina Palms, North Miami Beach" class="photos__pic photos__pic--left-side">
             <img src="images/photos/2.jpg" alt="Marina Palms, North Miami Beach" class="photos__pic photos__pic--left-side">
-          </div>
-          <p class="gallery__caption">Marina Palms <a href="#" class="link">North Miami Beach, FL 33162</a></p>
-          <div class="photos">
+          </article>
+          <h3 class="gallery__caption">Marina Palms <a href="#" class="link">North Miami Beach, FL 33162</a></h3>
+          <article class="photos">
               <img src="images/photos/3.jpg" alt="Edition Residents, Miami Beach" class="photos__pic">
               <img src="images/photos/4.jpg" alt="Edition Residents, Miami Beach" class="photos__pic">
-          </div>
-          <p class="gallery__caption">Edition Residens <a href="#" class="link">Miami Beach, FL 33139</a></p>
-          <div class="photos">
+          </article>
+          <h3 class="gallery__caption">Edition Residens <a href="#" class="link">Miami Beach, FL 33139</a></h3>
+          <article class="photos">
                 <img src="images/photos/5.jpg" alt="Faena House, Miami Beach" class="photos__pic photos__pic--right-side">
                 <img src="images/photos/6.jpg" alt="Faena House, Miami Beach" class="photos__pic photos__pic--right-side">
-          </div>
-          <p class="gallery__caption">Faena House <a href="#" class="link">Miami Beach, FL 33140</a></p>
+          </article>
+          <h3 class="gallery__caption">Faena House <a href="#" class="link">Miami Beach, FL 33140</a></h3>
 
           <button class="gallery__button button">View All</button>
         </div>
@@ -95,24 +95,24 @@
       <section class="section">
           <h2 class="heading section__heading">Testimonials<span class="heading__picture"></span></h2>
           <div class="testimonials">
-            <div class="person">
+            <article class="person">
               <img class="person__photo" src="images/people/1.jpg" alt="Tim Cook">
               <h3 class="person__name">Tim Cook</h3>
               <p class="person__position">CEO</p>
               <p class="person__text">Nice work, Certificates National Association of Realtors (USA).</p>
-            </div>
-            <div class="person">
+            </article>
+            <article class="person">
               <img class="person__photo" src="images/people/2.jpg" alt="Tim Cook">
               <h3 class="person__name">Katherine Adams</h3>
               <p class="person__position">Senior Vice President</p>
               <p class="person__text">My soul is illuminated by an unearthly joy, as these beautiful spring morning, which I enjoy with all my heart. I’m all alone and blissfully happy in the local edge.</p>
-            </div>
-            <div class="person">
+            </article>
+            <article class="person">
               <img class="person__photo" src="images/people/3.jpg" alt="Tim Cook">
               <h3 class="person__name">Jonathan Ive</h3>
               <p class="person__position">Chief Design Officer</p>
               <p class="person__text">When my lovely valley of steam rises and half-day sun is above an impermeable.</p>
-            </div>
+            </article>
           </div>
       </section>
       <section class="section">
@@ -139,7 +139,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="logo footer__logo"></div>
+        <a href="#" ><img src="./images/logo.png" alt="Miami Condo Kings Logo" class="logo footer__logo"></img></a>
     </footer>
 
     <script type="text/javascript" src="scripts/main.js"></script>
