--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
       <section class="section">
         <div class="description">
-          <h1 class="description__header">Miami <span>best</span>  Real estate  <a href="#">here</a></h1>
+          <h1 class="description__header">Miami <span>best</span>  Real estate  <a class="link" href="#">here</a></h1>
           <div class="description__text">
             <p>
               <span>Over 50 years experience in love.</span> <br> Mazel and VA Tsukkerman in his "Analysis of musical works."
