--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="header__top">
         <a href="#" ><img src="./images/logo.png" alt="Miami Condo Kings Logo" class="logo header__logo"></img></a>
         <div class="header__phone"><a href="tel:+1 234 555-55-55">+1 234 555-55-55</a></div>
-        <div class="header__get-in-touch"><a href="#" class="header__link">Call to order</a></div>
+        <div class="header__get-in-touch"><a href="tel:+1 234 555-55-55" class="header__link">Call to order</a></div>
       </div>
 
       <nav class="navigation header__navigation">
