--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="contact__text">
               <p>
                 <a href="mailto:hello@miami.com" class="link">Hello@miami.com</a> <br>
-                <a href="tel:+1 234 555-55"></a>
+                <a href="tel:+1 234 555-55" class="link">+1 234 555-55-55</a>
               </p>
               <address>
                 400 first ave. <br>
